test/tests/stages/18_structures/invalid_types/extra_credit/union_initializers/static_nested_init_too_long.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u
        Bool: 1
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
          CMemberDeclaration: 
            TIdentifier: b
            Long: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: tag
            Int: 
          CMemberDeclaration: 
            TIdentifier: contents
            Structure: 
              TIdentifier: u
              Bool: 1
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: my_struct
        CCompoundInit: 
          List[2]: 
            CSingleInit: 
              CConstant: 
                CConstInt: 
                  TInt: 10
                None: 
              None: 
            CCompoundInit: 
              List[2]: 
                CSingleInit: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
                CSingleInit: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                  None: 
              None: 
          None: 
        Structure: 
          TIdentifier: s
          Bool: 0
        None: 
